--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-.ftotopo {
-    position: absolute;
-    top: 120px;
-    right: 60px;
-    border-radius: 60%;
-    border: 15px solid transparent;
-  }
-  
   ul.circle {
     list-style-type: circle;
   }
@@ -16,107 +8,7 @@
     color: #555;
     font-size: 16px;
   }
-  @media (min-width: 6.25em) {
-    html {
-      font-size: 17px;
-    }
-  }
-  @media (min-width: 12.5em) {
-    html {
-      font-size: 18px;
-    }
-  }
-  @media (min-width: 18.75em) {
-    html {
-      font-size: 19px;
-    }
-  }
-  @media (min-width: 25em) {
-    html {
-      font-size: 20px;
-    }
-  }
-  @media (min-width: 31.25em) {
-    html {
-      font-size: 21px;
-    }
-  }
-  @media (min-width: 37.5em) {
-    html {
-      font-size: 22px;
-    }
-  }
-  @media (min-width: 43.75em) {
-    html {
-      font-size: 23px;
-    }
-  }
-  @media (min-width: 50em) {
-    html {
-      font-size: 24px;
-    }
-  }
-  @media (min-width: 56.25em) {
-    html {
-      font-size: 25px;
-    }
-  }
-  @media (min-width: 62.5em) {
-    html {
-      font-size: 26px;
-    }
-  }
-  @media (min-width: 68.75em) {
-    html {
-      font-size: 27px;
-    }
-  }
-  @media (min-width: 75em) {
-    html {
-      font-size: 28px;
-    }
-  }
-  @media (min-width: 81.25em) {
-    html {
-      font-size: 29px;
-    }
-  }
-  @media (min-width: 87.5em) {
-    html {
-      font-size: 30px;
-    }
-  }
-  @media (min-width: 93.75em) {
-    html {
-      font-size: 31px;
-    }
-  }
-  @media (min-width: 100em) {
-    html {
-      font-size: 32px;
-    }
-  }
-  @media (min-width: 106.25em) {
-    html {
-      font-size: 33px;
-    }
-  }
-  @media (min-width: 112.5em) {
-    html {
-      font-size: 34px;
-    }
-  }
-  @media (min-width: 118.75em) {
-    html {
-      font-size: 35px;
-    }
-  }
-  @media (min-width: 125em) {
-    html {
-      font-size: 36px;
-    }
-  }
-  
+ 
   *,
   *::before,
   *::after {
@@ -345,55 +237,17 @@
     line-height: 1;
     letter-spacing: -1px;
   }
-  @media (min-width: 30rem) {
-    h1,
-    .h1,
-    h2,
-    .h2,
-    h3,
-    .h3,
-    h4,
-    .h5 {
-      letter-spacing: -2px;
-    }
-  }
-  h1 a,
-  .h1 a,
-  h2 a,
-  .h2 a,
-  h3 a,
-  .h3 a,
-  h4 a,
-  .h5 a {
-    color: inherit;
-  }
-  h1 a:hover,
-  .h1 a:hover,
-  h2 a:hover,
-  .h2 a:hover,
-  h3 a:hover,
-  .h3 a:hover,
-  h4 a:hover,
-  .h5 a:hover {
-    border-bottom: 0.1875rem solid;
-  }
-  h1 span,
-  .h1 span,
-  h2 span,
-  .h2 span,
-  h3 span,
-  .h3 span,
-  h4 span,
-  .h5 span {
-    color: #de5f5f;
-  }
   
-  h1,
-  .h1 {
-    font-size: 1.2rem;
-  }
-  @media (min-width: 30rem) {
-    h1,
+
+/* Mobile: largura máxima de 480px */		
+@media screen and (max-width: 480px) {
+    .item-section,{
+        width:100%;
+    }
+    html {
+      font-size: 20px;
+    }	
+     h1,
     .h1 {
       font-size: 2.5rem;
     }
@@ -403,12 +257,7 @@
   .h2 {
     font-size: 1.2rem;
   }
-  @media (min-width: 30rem) {
-    h2,
-    .h2 {
-      font-size: 2.5rem;
-    }
-  }
+
   
   .pre {
     display: inline-block;
@@ -429,6 +278,21 @@
   .pre:hover {
     opacity: 1;
   }
+ }
+		
+/* Tablets: largura mínima de 768 pixels */
+@media screen and (min-width: 768px) {
+    html {
+      font-size: 24px;
+    }		
+ }
+
+/* Desktop:largura mínima de 992 pixels */
+@media screen and (min-width: 992px) {
+     html {
+      font-size: 25px;
+    }
+ }
   
   p {
     font-size: 0.75rem;
